# learn-protobuf

./: .gitignore
official-tutorial/go/: Makefile  addressbook.proto  go.mod
official-tutorial/go/cmd/add_person/: add_person.go
official-tutorial/go/tutorialpb/: addressbook.pb.go
official-tutorial/python/: .python-version  Makefile  add_person.py  addressbook.proto  pyproject.toml
